# piecewise_linear_fit_py

./: .gitignore  .jekel_pwlf.bib.un~  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.rst  convert_README_to_RST.sh  create_cupy_port.sh  pwlf.py  pyproject.toml  setup.py  sphinx_build_script.sh
.github/: ci.yml
docs/: .buildinfo  CNAME  about.html  examples.html  genindex.html  how_it_works.html  index.html  installation.html  license.html  modules.html  objects.inv  pwlf.html  py-modindex.html  requirements.html  search.html  searchindex.js
doctrees/: about.doctree  environment.pickle  examples.doctree  how_it_works.doctree  index.doctree  installation.doctree  license.doctree  modules.doctree  pwlf.doctree  requirements.doctree
examples/: EGO_integer_only.ipynb  README.md  README.rst  big_data_torch_example.py  compare_fitfast_and_ga.py  experiment_with_batch_process.py.ipynb  fitForSpecifiedNumberOfLineSegments.py  fitForSpecifiedNumberOfLineSegments_passDiffEvoKeywords.py  fitForSpecifiedNumberOfLineSegments_standard_deviation.py  fitWithKnownLineSegmentLocations.py  fit_begin_and_end.py  get_torch_derivatives.py  gp_opt_results  min_length_demo.ipynb  mixed_degree.py  mixed_degree_forcing_slope.py  model_persistence.py  model_persistence_prediction.py  prediction_variance.py  prediction_variance_degree2.py  readme.md  robust_regression.py  run_opt_to_find_best_number_of_line_segemtns.py  run_opt_to_find_best_number_of_line_segments.py  sineWave.py  sineWave_custom_opt_bounds.py  sineWave_degrees.py  sineWave_time_compare.py  slope_constraint_demo.ipynb  (+10 more)
(+74 files in other folders)
